# master_thesis_isaac

./: PROJECT.md  pyproject.toml
assets/robots/: go2.usd
configs/scenarios/: mock_corridor.yaml
isaac_unitree_starter/: TUTORIAL.md  check_isaac_sim_running.py  collect_vla_data_go2.py  collect_world_model_data_go2.py  create_empty_sim_scene.py  create_room_scene.py  eval_go2.py  generate_room_scene_data.py  generate_vla_sensor_data_go2.py  go2_lab_env.py  slam_pose_eval_stub.py  track_go2_sensors_empty_room.py  train_rl_go2.py  vald_run.py  validate_go2_setup.py  validate_isaac_lab.py
src/navbench/: __init__.py
src/navbench/core/: __init__.py  agent.py  benchmark.py  config.py  dataset.py  evaluator.py  inference.py  logging_utils.py  metrics.py  plugin.py  scenario.py  seeding.py  simulator.py  trainer.py  types.py
src/navbench/plugins/: __init__.py
src/navbench/plugins/hybrid/: __init__.py
src/navbench/plugins/rl_policy/: __init__.py
src/navbench/plugins/slam_baseline/: __init__.py
src/navbench/plugins/vla_semantic/: __init__.py
src/navbench/sim/: __init__.py  isaac_lab.py  isaac_sim.py  mock.py
synthetic_data_generation/: README.md
synthetic_data_generation/common/: __init__.py  backends.py  config.py  policies.py  writer.py
synthetic_data_generation/configs/: rl.yaml  slam.yaml  vla.yaml  world_model.yaml
synthetic_data_generation/rl/: generate_rl_data.py
synthetic_data_generation/slam/: generate_slam_data.py
synthetic_data_generation/vla/: generate_vla_data.py
synthetic_data_generation/world_model/: generate_world_model_data.py
(+1 files in other folders)
